fix: aligned content in desktop view

--- a/src/Components/ContentSection/ContentSection.css
+++ b/src/Components/ContentSection/ContentSection.css
@@ -58,6 +58,10 @@
 
 		& .section-content-ul {
 			margin-top: 0;
+			& li {
+				margin-left: 0;
+				padding-left: 0;
+			}
 		}
 	}
 }
