--- a/src/Components/EducationSection/EducationSection.css
+++ b/src/Components/EducationSection/EducationSection.css
@@ -34,7 +34,6 @@
 	}
 
 	.education-section-svgs-wrapper {
-		padding-left: 1rem;
 		.education-svg {
 			width: 120px;
 		}
