--- a/src/Components/FindMe/FindMe.css
+++ b/src/Components/FindMe/FindMe.css
@@ -29,7 +29,7 @@
 	}
 	.find-me-section-content {
 		width: 300px;
-		padding-left: 1rem;
+
 		margin-bottom: 3rem;
 		.find-me-svg {
 			width: 20px;
