--- a/src/Components/TitleSection/TitleSection.css
+++ b/src/Components/TitleSection/TitleSection.css
@@ -69,15 +69,15 @@ header {
 
 @media only screen and (min-width: 810px) {
 	header {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		gap: 3rem;
+		display: grid;
+		grid-template-columns: 200px 1fr;
+		gap: 2rem;
+		align-items: flex-start;
 
 		& .title-section-svg-container {
 			margin: 0;
-			width: 200px;
-			height: 200px;
+			width: 100px;
+			height: 100px;
 		}
 	}
 }
