--- a/src/Components/WorkedWithForSection/WorkedWithFor.css
+++ b/src/Components/WorkedWithForSection/WorkedWithFor.css
@@ -30,7 +30,6 @@
 		}
 	}
 	.worked-with-for-svgs-wrapper {
-		padding-left: 1rem;
 		.worked-with-svg {
 			width: 120px;
 		}
